<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <!--App-->
    <string name="app_name">Bid &amp; Track</string>
    <string name="app_email">bidtruck@email.com.br</string>

    <!--Menu / Drawer-->
    <string name="app_menu_title">Motorista</string>
    <string name="action_settings">Configurações</string>
    <string name="menu_drw_home">Início</string>
    <string name="menu_drw_entrega">Entregas</string>
    <string name="menu_drw_romaneio">Romaneio</string>
    <string name="menu_drw_sync">Sincronização</string>
    <string name="menu_drw_ocorr">Ocorrências</string>
    <string name="menu_drw_msg">Sair</string>
    <string name="menu_drw_oferta">Ofertas</string>

    <!--Titles / SubTitles-->
    <string name="app_title_main">Main Fragment</string>
    <string name="app_title_home">Home Fragment</string>
    <string name="title_empresa">Empresas</string>
    <string name="app_title_estudo_detalhes">Detalhes da Entrega</string>
    <string name="app_subtitle_entregas">Entregas</string>
    <!--Toast-->
    <!--Dialog-->
    <string name="app_dlg_confirm">Confirmar</string>
    <string name="app_dlg_cancel">Cancelar</string>
    <!--Button-->
    <string name="app_dlg_cadastrar">Cadastrar</string>
    <string name="app_dlg_foto">Tirar foto</string>
    <!--Forms-->

    <!--Outers-->
    <string name="app_empty_list">Nenhum item esta disponível para ser visualizado.</string>
    <string name="app_empty_list1">Não há romaneio em viagem no momento para esta empresa.</string>
    <string name="app_empty_list2">Seu romaneio foi finalizado, aceite uma nova oferta para continuar!</string>
    <string name="app_empty_ocorrencia_list">Esta entrega não possuí ocorrências.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="toolbar_offer_details">Entregas da Oferta</string>

    <!--Mensagens de erro-->
    <string name="app_err_exc_semConexao">Conexão com a internet não foi encontrada."</string>
    <string name="app_err_exc_timeout">Tempo de conexão excedido."</string>
    <string name="app_err_null_motorista">Os dados de autenticação não foram encontrados.</string>
    <string name="app_err_null_destinatario">Ocorreu um erro ao tentar ler os dados do destinatario.</string>
    <string name="app_err_null_entrega">Ocorreu um erro ao tentar ler os dados da entrega.</string>
    <string name="app_err_null_romaneio">Ocorreu um erro ao tentar ler os dados do romaneio.</string>
    <string name="app_err_input_email">Por favor, informe um email válido.</string>
    <string name="app_err_input_dadosIncorretos">Os dados informados estão incorretos.</string>
    <string name="app_err_input_vazio">Você não possui romaneio disponível neste momento.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detalhes_estudo">DetalhesEstudoActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_delivery">DeliveryActivity</string>
    <string name="title_activity_occurrence">OccurrenceActivity</string>
    <string name="titulo_romaneio">Romaneios</string>

    <string name="app_api_key">AIzaSyCRXIP-xfakNAk8lodv20x4xD6hFWNwD8Y</string>
    <string name="imagem_capturada">Imagens Capturadas -</string>
</resources>
